asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__gitui__tests__commit__commit_instant_fixup_stashes_changes_and_keeps_empty.snap
---
source: src/gitui/tests/commit.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   instant_fixup.txt                                                   |
 @@ -1 +1 @@                                                                    |
 -fixed                                                                         |
 +unstaged                                                                      |
                                                                                |
 Recent commits                                                                 |
 77cc537 main empty commit                                                      |
 108474f modify instant_fixup.txt                                               |
▌f05ea1d add instant_fixup.txt                                                  |
────────────────────────────────────────────────────────────────────────────────|
$ git commit --fixup b6eadadbf0b746c00135b317fab80d9801c2d7bb                   |
[main c0f1150] fixup! modify instant_fixup.txt                                  |
 Author: Author Name <author@email.com>                                         |
 1 file changed, 1 insertion(+), 1 deletion(-)                                  |
$ git rebase -i -q --autostash --keep-empty --autosquash b6eadadbf0b746c00135b31|
Applied autostash.                                                              |
Created autostash: bc5bcfb                                                      |
styles_hash: e862947c002fddb3
